--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,16 @@ body {
     background-color: #DEDEDE;
 }
 hr {
+	align: center;
+	width: 75%;
     background-color: #D3D3D3;
     border-radius: 50%;
     border-color: #D3D3D3;
     border-style: ridge;
     display: block;
     height: 1px;
-    margin-bottom: 10px;
-	    margin-left: auto;
+
+	margin-left: auto;
 	margin-right: auto;
 }
 /*Link Color Config*/
@@ -95,10 +97,11 @@ a:active {
     color: #000;
 }
 #cssmenu {
-	left: 27%;
-	position: relative;
+	left: 11%;
+	top: 250px;
+	position: fixed;
     font-family: 'Lato', sans-serif;
-    width: auto;
+    width: 80%;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     -ms-border-radius: 3px;
@@ -209,10 +212,10 @@ a:active {
     padding-top: 30px;
     margin-left: 30px;
 }
-.headerImage {
+#headerImage {
 	margin-left:10%;
 }
-.headerImage img{
+#headerImage img{
 	margin-top: 2%;
 	position: fixed;
 	height:185px;
@@ -231,7 +234,7 @@ a:active {
     width: 40%;
     height: 100%;
     background-color: #FFF;
-    margin-top: 21%;
+    margin-top: 25%;
     margin-bottom: 5%;
     margin-left: auto;
 	margin-right: auto;
@@ -240,6 +243,9 @@ a:active {
     padding-right: 5%;
     padding-bottom: 2%;
     padding-left: 5%;
+	border-color: #D3D3D3;
+    border-style: solid;
+    border-width: 3px;
 }
 .bodySection #title {
     color: ;
@@ -250,7 +256,7 @@ a:active {
 .bodySection #content {
     color: #000;
     font-size: 150%;
-    padding: 15px;
+    padding: 10px;
     font-family: 'Roboto Slab', sans-serif;
 }
 /*Contact form config*/
