--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,11 @@ a:active {
 	position: fixed;
     font-family: 'Lato', sans-serif;
     width: 80%;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    border-radius: 25px 25px 10px 10px;
     background: #344596;
     font-size: 15px;
     -moz-box-shadow: inset 0 2px 2px rgba(255, 255, 255, 0.3);
@@ -118,11 +118,11 @@ a:active {
     -moz-box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 -2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    border-radius: 50px;
     display: block;
     float: none;
     zoom: 1;
@@ -146,15 +146,15 @@ a:active {
     color: #fff;
     padding: 7px 20px;
     display: block;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    border-radius: 50px;
 }
 #cssmenu > ul > li > a:hover,
 #cssmenu > ul > li:hover > a {
-    background-color: #4857a0;
+    background-color: #707cb5;
 	
 }
 #cssmenu li li a {
@@ -167,20 +167,21 @@ a:active {
     border-color: #4857a0;
 }
 #cssmenu ul ul {
-	text-align:center;
-    margin: 0 10px;
+	text-align: center;
+    margin: auto;
     padding: 0 10px;
     float: none;
+	width: 85%;
     background: white;
     border: 2px solid #4857a0;
     border-top: none;
     right: 0;
     left: 0;
-    -webkit-border-radius: 0 0 3px 3px;
-    -moz-border-radius: 0 0 3px 3px;
-    -ms-border-radius: 0 0 3px 3px;
-    -o-border-radius: 0 0 3px 3px;
-    border-radius: 0 0 3px 3px;
+    -webkit-border-radius: 0 0 50px 50px;
+    -moz-border-radius: 0 0 50px 50px;
+    -ms-border-radius: 0 0 50px 50px;
+    -o-border-radius: 0 0 50px 50px;
+    border-radius: 0 0 25px 25px;
     -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
@@ -223,7 +224,7 @@ a:active {
     border-style: solid;
     border-width: 5px;
 	padding:5px;
-	border-radius:15%;
+	border-radius: 15%;
 	border-color: #4857a0;
 	background-color: #5c6aab;
 }
@@ -234,7 +235,7 @@ a:active {
     width: 40%;
     height: 100%;
     background-color: #FFF;
-    margin-top: 25%;
+    margin-top: 20%;
     margin-bottom: 5%;
     margin-left: auto;
 	margin-right: auto;
@@ -319,6 +320,22 @@ a:active {
 	text-align: center;
 	background-color:#fff;
 }
+
+/*Game1 Page*/
+#game1 {
+	border-color: #344596;
+    border-style: solid;
+    border-width: 3px;
+}
+
+#game1 {
+	color: #344596;
+    font-size: 200%;
+    padding: 15px;
+    font-family: 'Roboto Slab', sans-serif;
+	background-color: #c2c7df;
+}
+
 /***************/
 /*
 Credits:
