--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
+/*
+--------------------------------------------------------------------------------------------------------------------
+***************************************************************************************************************
+CREDITS:
+Thanks To:
+BOOTSTRAP for providing basic elements one would provide on a websites that can be easily modified for use on your own website. http://getbootstrap.com/
+
+***************************************************************************************************************
+--------------------------------------------------------------------------------------------------------------------
+*/
+
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 html {
     color: #000;
@@ -27,47 +38,60 @@ hr {
     padding-top: 30px;
     position: relative;
 }
-.jumbotron #headerText{
-	position: absolute;
+@media (max-width: @screen-xs) {
+    body {
+        font-size: 4px;
+    }
+}
+@media (max-width: @screen-sm) {
+    body {
+        font-size: 2px;
+    }
+}
+iframe {
+    margin: 0 auto;
+}
+.headerText a,
+.headerText h1 {
+    font-size: 3em;
 }
 .jumbotron img {
     border-color: #4857a0;
     border-radius: 40px;
     border-style: solid;
     border-width: 5px;
-	z-index:1;
+    z-index: 1;
 }
 .headerText a,
 .headerText h1 {
-	color: #fff;
-	z-index: 1;
-	position: absolute;
+    color: #fff;
+    z-index: 1;
+    position: absolute;
     left: 50%;
     transform: translateX(-50%);
 }
 .headerText a {
-	margin-top: 70px;
+    margin-top: 70px;
     font-family: 'Lobster', cursive;
-    font-size: 50px;
 }
-.headerText h1{
-	margin-top: 120px;
-	font-family: 'Orbitron', sans-serif;
-	font-size: 40px;
+.headerText h1 {
+    margin-top: 120px;
+    font-family: 'Orbitron', sans-serif;
 }
 .container-fluid,
 .navbar-inverse .navbar-nav>.active>a,
 .navbar-inverse .navbar-nav>.active>a:focus,
 .navbar-inverse .navbar-nav>.active>a:hover {
-	font-size: 17px;
+    font-size: 17px;
     background-color: #344596;
 }
-
 .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     font-size: 17px;
 }
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
-	border-radius: 12px;
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:focus,
+.navbar-inverse .navbar-nav > .open > a:hover {
+    border-radius: 12px;
 }
 .well {
     background-color: #f5f5f5;
@@ -102,13 +126,13 @@ hr {
     position: relative;
 }
 .pyAdv {
-	margin: 30px auto;
-	border-radius:5px;
-	background-color:#fff;
-	border-radius:12px;
+    margin: 30px auto;
+    border-radius: 5px;
+    background-color: #fff;
+    border-radius: 12px;
 }
-.pyAdv img{
-	padding: 15px 0;
+.pyAdv img {
+    padding: 15px 0;
 }
 .createdBy h4 {
     font-size: 12px;
@@ -128,16 +152,16 @@ hr {
     top: 0;
 }
 .well p {
-	font-weight: bold;
-font-family: 'Candal', sans-serif;
+    font-weight: bold;
+    font-family: 'Candal', sans-serif;
 }
-  .carousel-inner > .item > img,
-  .carousel-inner > .item > a > img {
-      width: 80%;
-      margin: auto;
-  }
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 80%;
+    margin: auto;
+}
 .footer {
-    background-image: linear-gradient(#344596, #000) ;
+    background-image: linear-gradient(#344596, #000);
     border-top: 1px solid #000;
     bottom: 0;
     height: 60px;
@@ -152,9 +176,7 @@ font-family: 'Candal', sans-serif;
     color: #7F7F7F;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
-    margin-left: auto;
-    margin-right: 0;
-    margin-top: 10px;
+    margin: 10px auto 0 auto;
     text-align: center;
 }
 .footer #emailLink:hover {
