--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@ hr {
     padding-top: 30px;
     position: relative;
 }
+.jumbotron img {
+    border-color: #4857a0;
+    border-radius: 40px;
+    border-style: solid;
+    border-width: 5px;
+    z-index: 0;
+}
 @media (max-width: @screen-xs) {
     body {
         font-size: 4px;
@@ -54,13 +61,6 @@ iframe {
 .headerText a,
 .headerText h1 {
     font-size: 3em;
-}
-.jumbotron img {
-    border-color: #4857a0;
-    border-radius: 40px;
-    border-style: solid;
-    border-width: 5px;
-    z-index: 1;
 }
 .headerText a,
 .headerText h1 {
@@ -79,11 +79,13 @@ iframe {
     font-family: 'Orbitron', sans-serif;
 }
 .container-fluid,
+.navbar-inverse,
 .navbar-inverse .navbar-nav>.active>a,
 .navbar-inverse .navbar-nav>.active>a:focus,
 .navbar-inverse .navbar-nav>.active>a:hover {
     font-size: 17px;
     background-color: #344596;
+	z-index:3;
 }
 .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     font-size: 17px;
@@ -102,6 +104,7 @@ iframe {
     min-height: 40px;
     padding: 30px;
     webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+	z-index: 0;
 }
 .well h3 {
     margin: 25px 30px 0 30px;
@@ -149,7 +152,7 @@ iframe {
     border-radius: 0 0 20px 20px;
     height: 120px;
     position: absolute;
-    top: 0;
+    top: 50px;
 }
 .well p {
     font-weight: bold;
